[package]

name = "fern"
version = "0.5.0-dev"
authors = ["David Ross <daboross@daboross.net>"]
description = "Simple, efficient logging"

documentation = "https://dabo.guru/rust/fern/"
repository = "https://github.com/daboross/fern"
readme = "README.md"

license = "MIT"
keywords = ["log", "logging", "logger"]
categories = ["development-tools::debugging"]

[badges]
travis-ci = { repository = "daboross/fern" }
appveyor = { repository = "daboross/fern" }

[dependencies]
# log = "0.4"
log = { git = "https://github.com/rust-lang-nursery/log.git" }

[dev-dependencies]
tempdir = "0.3"
chrono = "0.4"
clap = "2.22"
